--- a/Kochwelt/danny_rezept.html
+++ b/Kochwelt/danny_rezept.html
@@ -212,111 +212,119 @@
             margin-right: 180px;
 
         }
+
+
+
     </style>
 
 </head>
 
 <body>
-    <nav class="header">
-        <div class="main-head">
+
+    <header>
+
+        <section class="main-head">
 
             <div class="logo-head"
                 style="width: 260px; height: 78px; background-image: url('./img/logo.png'); background-size: cover; background-position: center;">
             </div>
 
-            <div class="nav-links">
+            <nav>
                 <a href="./index.html">Start</a>
                 <a href="./rezept_des_tages.html">Rezept des Tages</a>
                 <a href="./kontakt.html">Kontakt</a>
                 <a href="./impressum.html">Impressum</a>
-            </div>
-        </div>
-    </nav>
+            </nav>
+        </section>
+    </header>
 
-    <div class="container">
-        <!-- Title -->
-        <h1 class="recipe-title">knackiger Wintersalat</h1>
 
-        <!-- Image -->
-        <div class="recipe-image"></div>
+    <main>
 
-        <!-- Meta Information -->
-        <div class="recipe-meta">
-            <div class="meta-item">
+        <main class="container">
+            <!-- Title -->
+            <h1 class="recipe-title">knackiger Wintersalat</h1>
 
-                <img src="./img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
-                25 Min.
-            </div>
-            <div class="meta-item">
+            <!-- Image -->
+            <div class="recipe-image"></div>
 
-                <img src="./img/icons/brain-solid.svg" alt="Schweregrad" class="meta-icon">
-                Simpel
-            </div>
-            <div class="meta-item">
-                <img src="./img/icons/calendar-alt-regular.svg" alt="Kalender" class="meta-icon">
-                21.11.2024
+            <!-- Meta Information -->
+            <div class="recipe-meta">
+                <div class="meta-item">
 
-            </div>
-        </div>
+                    <img src="./img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
+                    25 Min.
+                </div>
+                <div class="meta-item">
 
-        <!-- Portion Control -->
-        <div class="portion-control">
-            <label for="portions">Anzahl der Portionen:</label>
-            <input type="number" id="portions" value="1" min="1" max="20">
-            <button>Portionen</button>
-        </div>
+                    <img src="./img/icons/brain-solid.svg" alt="Schweregrad" class="meta-icon">
+                    Simpel
+                </div>
+                <div class="meta-item">
+                    <img src="./img/icons/calendar-alt-regular.svg" alt="Kalender" class="meta-icon">
+                    21.11.2024
 
-        <!-- Ingredients -->
-        <div class="ingredients-section">
-            <h2 class="ingredients-title">Zutaten:</h2>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">62 ½ g </span> Feldsalat
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">¼</span> Granatapfel
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">½</span> Orange
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">1 EL</span> Walnusskern
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">20 g</span> Ziegen- Weichkäse
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">¼ EL</span> Balsamicoessig (hell)
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">¼ EL</span> Honig
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">½ TL</span> Senf
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">½ EL</span> Olivenöl
+                </div>
             </div>
 
-        </div>
+            <!-- Portion Control -->
+            <div class="portion-control">
+                <label for="portions">Anzahl der Portionen:</label>
+                <input type="number" id="portions" value="1" min="1" max="20">
+                <button>Portionen</button>
+            </div>
 
+            <!-- Ingredients -->
+            <div class="ingredients-section">
+                <h2 class="ingredients-title">Zutaten:</h2>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">62 ½ g </span> Feldsalat
+                </div>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">¼</span> Granatapfel
+                </div>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">½</span> Orange
+                </div>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">1 EL</span> Walnusskern
+                </div>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">20 g</span> Ziegen- Weichkäse
+                </div>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">¼ EL</span> Balsamicoessig (hell)
+                </div>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">¼ EL</span> Honig
+                </div>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">½ TL</span> Senf
+                </div>
+                <div class="ingredient-item">
+                    <span class="ingredient-quantity">½ EL</span> Olivenöl
+                </div>
 
-
-
-        <div class="preparation-section">
-
-            <h2 class="ingredients-title">Zubereitung:</h2>
-
-            <div class="meta-item-preparation">
-                <img src="./img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
-                Gesamtzeit: 25 Minuten
             </div>
 
 
-        </div>
 
 
+            <div class="preparation-section">
 
-         <footer>
+                <h2 class="ingredients-title">Zubereitung:</h2>
+
+                <div class="meta-item-preparation">
+                    <img src="./img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
+                    Gesamtzeit: 25 Minuten
+                </div>
+
+
+            </div>
+
+        </main>
+
+        <footer>
             <img class="footerlogo" src="img/logo.png">
             <div class="footerlinks">
                 <a href="kontakt.css">Kontakt</a>
@@ -335,7 +343,7 @@
                     </a>
                 </div>
             </div>
-        </footer> 
+        </footer>
 </body>
 
 </html>
