--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -19,21 +19,21 @@
 
 <body>
 <div class="my-body">    
-    <nav class="header">
-        <div class="main-head">
+    <header>
+        <section class="main-head">
 
             <div class="logo-head"
                 style="width: 225px; height: 75px; background-image: url('./img/logo.png'); background-size: cover; background-position: center;">
             </div>
 
-            <div class="nav-links">
+            <nav>
                 <a href="./index.html">Start</a>
                 <a href="./rezept_des_tages.html">Rezept des Tages</a>
                 <a href="./kontakt.html">Kontakt</a>
                 <a href="./impressum.html">Impressum</a>
-            </div>
-        </div>
-    </nav>
+            </nav>
+        </section>
+    </header>
 
     <div class="recipe-section">
             <img src="./img/croissant.jpg">
@@ -53,19 +53,19 @@
         <div class="menu-section">
             <div class="menu">
                 <img src="./img/croissant.jpg">
-                <p class="menu-text">Platzhalter</p>
+                <h3 class="menu-text">Platzhalter</h3>
             </div>
             <div class="menu">
                 <img src="./img/croissant.jpg">
-                <p class="menu-text">Platzhalter</p>
+                <h3 class="menu-text">Platzhalter</h3>
             </div>
             <div class="menu">
                 <img src="./img/croissant.jpg">
-                <p class="menu-text">Platzhalter</p>
+                <h3 class="menu-text">Platzhalter</h3>
             </div>
             <div class="menu">    
                 <img src="./img/croissant.jpg">
-                <p class="menu-text">Platzhalter</p>
+                <h3 class="menu-text">Platzhalter</h3>
             </div>
         </div>
 
