section new rezipe

--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -49,28 +49,28 @@
 
     </div>
 
-    <div class="section3">
-
+    <div class="section-new-rezipe">
+    <section class="title-new-section">
         <h2>Lust auf was Neues</h2>
-
-        <div class="menu-section">
+    </section>
+        <section class="menu-section">
             <div class="menu">
-                <img src="./img/croissant.jpg">
-                <p class="menu-text">Platzhalter</p>
+                <a href="danny_rezept.html"><img src="./img/wintersalat.jpg"></a>
+                <h3>Wintersalat</h3>
             </div>
             <div class="menu">
                 <img src="./img/croissant.jpg">
-                <p class="menu-text">Platzhalter</p>
+                <h3>Platzhalter</h3>
             </div>
             <div class="menu">
                 <img src="./img/croissant.jpg">
-                <p class="menu-text">Platzhalter</p>
+                <h3>Platzhalter</h3>
             </div>
             <div class="menu">    
                 <img src="./img/croissant.jpg">
-                <p class="menu-text">Platzhalter</p>
+                <h3>Platzhalter</h3>
             </div>
-        </div>
+        </section>
 
     </div>
 </main>
