add recipe pascal_recipe

--- a/Kochwelt/pascal_recipe.html
+++ b/Kochwelt/pascal_recipe.html
@@ -186,69 +186,93 @@
 
     <main class="container">
         <!-- Title -->
-        <h1 class="recipe-title">knackiger Wintersalat</h1>
+        <h1 class="recipe-title">Rote Wintersuppe</h1>
 
         <!-- Image -->
-        <div class="recipe-image"></div>
+        <img class="recipe-image" src="" alt="">
 
         <!-- Meta Information -->
-        <div class="recipe-meta">
+        <section class="recipe-meta">
+            
             <div class="meta-item">
 
                 <img src="./img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
-                25 Min.
+                20 Min.
             </div>
-            <div class="meta-item">
 
+            <div class="meta-item">
                 <img src="./img/icons/brain-solid.svg" alt="Schweregrad" class="meta-icon">
                 Simpel
             </div>
+
             <div class="meta-item">
                 <img src="./img/icons/calendar-alt-regular.svg" alt="Kalender" class="meta-icon">
-                21.11.2024
-
+                23.11.2024
             </div>
-        </div>
+
+        </section>
 
         <!-- Portion Control -->
-        <div class="portion-control">
+        <section class="portion-control">
             <label for="portions">Anzahl der Portionen:</label>
-            <input type="number" id="portions" value="1" min="1" max="20">
+            <input type="number" id="portions" value="1" min="1" max="8">
             <button>Portionen</button>
-        </div>
+        </section>
 
         <!-- Ingredients -->
-        <div class="ingredients-section">
-            <h2 class="ingredients-title">Zutaten:</h2>
+        <section class="ingredients-section">
+
+            <h2 class="ingredients-title"></h2>
+
             <div class="ingredient-item">
-                <span class="ingredient-quantity">62 ½ g </span> Feldsalat
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">¼</span> Granatapfel
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">½</span> Orange
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">1 EL</span> Walnusskern
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">20 g</span> Ziegen- Weichkäse
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">¼ EL</span> Balsamicoessig (hell)
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">¼ EL</span> Honig
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">½ TL</span> Senf
-            </div>
-            <div class="ingredient-item">
-                <span class="ingredient-quantity">½ EL</span> Olivenöl
+                <span class="ingredient-quantity">etwas</span> Butter 
             </div>
 
-        </div>
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">½</span> Zwiebel(n), klein gewürfelt 
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">¼ Stück(e)</span> Ingwer, geschält, fein gehackt, fingerdicke Scheibe oder mehr
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">¼</span> Apfel, fest, säuerlich, geschält, grob gewürfelt
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">¼ Schuss</span> Weißwein, trocken, fruchtig, oder Apfelwein, nicht süß
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">¼ Liter</span> Gemüsebrühe
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">½</span> Rote Bete, geschält, gewürfelt
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">½</span> Kartoffel(n), klein, geschält, gewürfelt
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity"></span> Salz und Pfeffer
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">¼ Spritzer</span> Worcestershiresauce
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity">1 TL</span> Schmand
+            </div>
+
+            <div class="ingredient-item">
+                <span class="ingredient-quantity"></span> Kräuter, frisch
+            </div>
+
+        </section>
 
 
 
@@ -258,22 +282,22 @@
             <h2 class="ingredients-title">Zubereitung:</h2>
 
             <div class="meta-item-preparation">
-                <img src="./img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
-                Gesamtzeit: 25 Minuten
+
+                <img src="img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
+                
             </div>
 
             <div>
+
                 <p>
-                    Feldsalat waschen, und ggf. vom Strunk befreien. Granatapfel halbieren und in
-                    einer Schüssel mit Wasser die Kerne aus der Frucht drücken. Dann die Kerne mit dem Wasser durch ein
-                    Sieb abschütten und anschließend die weiße Haut entfernen.Orangen schälen, die weiße Haut dabei
-                    entfernen. Mit einem scharfen Messer vorsichtig die Filets zwischen den Trennhäuten herauslösen, den
-                    heraustretenden Saft dabei auffangen. Walnusskerne in einer beschichteten Pfanne goldbraun rösten
-                    und nach dem Abkühlen grob hacken. Ziegenweichkäse in Stücke schneiden.Für das Dressing
-                    Balsamico-Essig mit Honig, Senf und 4 EL Orangensaft verrühren, zuletzt das Olivenöl unterschlagen.
-                    Mit Pfeffer und etwas Salz würzen.
-
-
+                    Die Zwiebeln in Butter anschwitzen. Ingwer- und Apfelwürfel zugeben, kurz mitschwitzen und mit dem Wein ablöschen. 
+                    Die Brühe zugießen und zum Kochen bringen. 
+                    Rote Bete und Kartoffeln zugeben, aufkochen, die Hitze reduzieren, zudecken und ca. 15-20 Minuten köcheln lassen. Pürieren, 
+                    abschmecken und zum Kochen bringen. Den Schmand zugeben, garnieren und genießen.
+                    Tipp: Rote Bete kann vorgegart (dann aber noch fest) oder frische Knolle sein. 
+                    Die besten Erfahrungen habe ich mit selbst halbgar gekochter Roter Bete gemacht, 
+                    dann ist das Schälen und Schneiden sauberer. Kartoffeln sorgen für die Konsistenz und auch dafür, 
+                    dass die Farbe nicht so stechend blutig wirkt.
                 </p>
 
             </div>
