--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -77,7 +77,7 @@
 
 <footer>
     <section class="footer">
-        <img class="footer_logo" img src="/img/logo-white.png" alt="LOGO">
+        <img class="footer_logo" img src="./img/logo-white.png" alt="LOGO">
 
         <div class="impressum_contact">
             <a href="kontakt.css">Kontakt</a>
