--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -76,17 +76,27 @@
         </section>
 
     </div>
+    <!-- 4. Section -->
+    
+    <section class="section-info-board">
+
+            <h2>Pfanne vs. Wok - Was ist besser?</h2> 
+
+        <div class="info-board">
+                <p>Eine Pfanne eignet sich hervorragend für gleichmäßiges Braten und
+                    Anbraten, besonders bei flachen Speisen. Ein Wok hingegen ermöglicht
+                    schnelles  Garen bei hoher Hitze und ist ideal für asiatische
+                    Gerichte und größere Mengen Gemüse, da er eine bessere
+                    Wärmeverteilung hat. Die Wahl hängt vom  Gericht und der gewünschten
+                    Gartechnik ab.
+                </p>
+                
+                <img class="info-board-img-right" src="/img/wok.jpg" alt="wok">
+            </div>
+
+    </section>
 </main>
 
-<!-- 4. Section -->
-
-<main class="section-info-board">
-    <h2>Pfanne vs. Wok - Was ist besser?</h2>
-        <section class="info-board">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi velit similique obcaecati, numquam corrupti ut quis ab dolorum officiis dolorem molestiae ipsam sint at soluta eaque ipsa quos ratione? Quam.</p>
-            <img class="info-board-img-right" src="/img/wok.jpg" alt="wok">
-        </section>
-</main>
 
 <!-- footer -->
 
