Fix Recipie Scaling and swap Recipie Table shading

--- a/Kochwelt/pascal_recipe.html
+++ b/Kochwelt/pascal_recipe.html
@@ -82,52 +82,52 @@
 
                 <tbody>
                     <tr class="ingredient-item">
-                        <td data-base="0" data-text="etwas" class="ingredient-quantity">etwas</td>
-                        <td>Butter</td>
+                        <td class="ingredient-quantity" data-base="0" data-text="etwas">etwas</td>
+                        <td class="ingredient-text">Butter</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.5" class="ingredient-quantity">0.5</td>
-                        <td>Zwiebel(n), klein gewürfelt</td>
+                        <td class="ingredient-quantity" data-base="0.5">0.5</td>
+                        <td class="ingredient-text">Zwiebel(n), klein gewürfelt</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.25" class="ingredient-quantity">0.25</td>
-                        <td>Ingwer, geschält, fein gehackt</td>
+                        <td class="ingredient-quantity" data-base="0.25">0.25</td>
+                        <td class="ingredient-text">Ingwer, geschält, fein gehackt</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.25" class="ingredient-quantity">0.25</td>
-                        <td>Apfel, fest, säuerlich, geschält, grob gewürfelt</td>
+                        <td class="ingredient-quantity" data-base="0.25">0.25</td>
+                        <td class="ingredient-text">Apfel, fest, säuerlich, geschält, grob gewürfelt</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.25 Liter" class="ingredient-quantity">0.25 Liter</td>
-                        <td>Weißwein oder Apfelwein</td>
+                        <td class="ingredient-quantity" data-base="0.25" data-text="Liter">0.25 Liter</td>
+                        <td class="ingredient-text">Weißwein oder Apfelwein</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.25 Liter" class="ingredient-quantity">0.25 Liter</td>
-                        <td>Gemüsebrühe</td>
+                        <td class="ingredient-quantity" data-base="0.25" data-text="Liter">0.25 Liter</td>
+                        <td class="ingredient-text">Gemüsebrühe</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.5" class="ingredient-quantity">0.5</td>
-                        <td>Rote Bete, geschält, gewürfelt</td>
+                        <td class="ingredient-quantity" data-base="0.5">0.5</td>
+                        <td class="ingredient-text">Rote Bete, geschält, gewürfelt</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.5" class="ingredient-quantity">0.5</td>
-                        <td>Kartoffel(n), klein, geschält, gewürfelt</td>
+                        <td class="ingredient-quantity" data-base="0.5">0.5</td>
+                        <td class="ingredient-text">Kartoffel(n), klein, geschält, gewürfelt</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0" data-text="etwas" class="ingredient-quantity">etwas</td>
-                        <td>Salz und Pfeffer</td>
+                        <td class="ingredient-quantity" data-base="0" data-text="etwas">etwas</td>
+                        <td class="ingredient-text">Salz und Pfeffer</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.25 Spritzer" class="ingredient-quantity">0.25 Spritzer</td>
-                        <td>Worcestershiresauce</td>
+                        <td class="ingredient-quantity" data-base="0.25" data-text="Spritzer">0.25 Spritzer</td>
+                        <td class="ingredient-text">Worcestershiresauce</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="1 TL" class="ingredient-quantity">1 TL</td>
-                        <td>Schmand</td>
+                        <td class="ingredient-quantity" data-base="1" data-text="TL">1</td>
+                        <td class="ingredient-text">Schmand</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0" data-text="etwas" class="ingredient-quantity">etwas</td>
-                        <td>Frische Kräuter</td>
+                        <td class="ingredient-quantity" data-base="0" data-text="etwas">etwas</td>
+                        <td class="ingredient-text" >Frische Kräuter</td>
                     </tr>
                 </tbody>
             </table>
