--- a/Kochwelt/pascal_recipe.html
+++ b/Kochwelt/pascal_recipe.html
@@ -42,7 +42,7 @@
         <h1 class="recipe-title">Rote Wintersuppe</h1>
 
         <!-- Image -->
-        <img class="recipe-image" src="./img/wintersuppe.png" alt="Wintersuppe">
+        <img class="recipe-image" src="./img/wintersuppe.webp" alt="Wintersuppe">
 
         <!-- Meta Information -->
         <section class="recipe-meta">
