--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -66,7 +66,7 @@
                 <h3>Platzhalter</h3>
             </div>
             <div class="menu">
-                <a href="pascal_recipe.html"><img src="./img/wintersuppe.png"></a>
+                <a href="pascal_recipe.html"><img src="./img/wintersuppe.webp"></a>
                 <h3>Wintersuppe</h3>
             </div>
             <div class="menu">    
