add favicon and remove value from ramon_rezept.html

--- a/Kochwelt/pascal_recipe.html
+++ b/Kochwelt/pascal_recipe.html
@@ -122,7 +122,7 @@
                         <td class="ingredient-text">Worcestershiresauce</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td class="ingredient-quantity" data-base="1" data-text="TL">1</td>
+                        <td class="ingredient-quantity" data-base="1" data-text="TL">1 TL</td>
                         <td class="ingredient-text">Schmand</td>
                     </tr>
                     <tr class="ingredient-item">
