--- a/Kochwelt/impressum.html
+++ b/Kochwelt/impressum.html
@@ -56,9 +56,9 @@
 
         <h2>Quellen:</h2>
         <p>
-            Quelle: e-recht24.de
+            Quelle: e-recht24.de<br>
 
-            Created my free logo at LogoMakr.com
+            Created my free logo at LogoMakr.com<br>
 
             The icons are provided by FontAwesome unter the Creative Commons Attribution 4.0 International license
         </p>
