fix  Kontakt & Impressum link in Footer

--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -107,8 +107,8 @@
         <a href="index.html"><img class="footer_logo" img src="./img/logo-white.png" alt="LOGO"></a> 
 
         <div class="impressum_contact">
-            <a href="kontakt.css">Kontakt</a>
-            <a href="impressum.css">Impressum</a>
+            <a href="./kontakt.html">Kontakt</a>
+            <a href="./impressum.html">Impressum</a>
         </div>
 
         <div class="socials">
