--- a/Kochwelt/pascal_recipe.html
+++ b/Kochwelt/pascal_recipe.html
@@ -133,7 +133,7 @@
             </table>
         
 
-        <script src="js/pascal_recipe.js"></script>
+        <script src="./js/pascal_recipe.js"></script>
         </section>
 
 
