edit Rezept des Tages

--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -47,8 +47,8 @@
             <img src="./img/croissant.jpg">
         <div class="recipe-content">
 
-            <h1 class="recipe-title">TEST ÜBERSCHRIFT</h1>
-            <p class="recipe-description">TEXT </p>
+            <h1 class="recipe-title">Rezept des Tages</h1>
+            <p class="recipe-description">4 Gänge Menü </p>
             <a href="rezept_des_tages.html" class="recipe-button">Rezept öffnen</a>
         </div>
 
